# nethackUWP

./: .gitignore  CMakeLists.txt  NativeMainPage.h  NethackNative.h  NethackUWP.sln
NethackUWP/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  NativeMainPage.cpp  NethackInterop.cpp  NethackInterop.h  NethackNative.cpp  NethackUWP.vcxproj  NethackUWP.vcxproj.filters  NethackUWP_TemporaryKey.pfx  Package.appxmanifest  defaults.nh  rumors  sysconf  wizkit.txt
dgn_comp/: dgn_comp.vcxproj  dgn_comp.vcxproj.filters
dgn_comp/Output_raw/: dgn_comp.tab.c  dgn_comp.tab.h  dgn_main.c  lex.yy.c
lev_comp/: lev_comp.vcxproj  lev_comp.vcxproj.filters
makedefs/: makedef.bat  makedefs.vcxproj  makedefs.vcxproj.filters
nethack_original/: nethack_original.vcxproj  nethack_original.vcxproj.filters
nethack_original/git_dump_3.6/dat/: .gitignore  dungeon
nethack_original/git_dump_3.6/include/: config.h  date.h  ntconf.h  patchlevel.h  you.h
nethack_original/git_dump_3.6/src/: .gitignore  do.c  dungeon.c  end.c  files.c  tile.c
nethack_original/git_dump_3.6/sys/share/: cppregex.cpp  posixregex.c
nethack_original/git_dump_3.6/sys/uwp/: uwp.cpp
nethack_original/git_dump_3.6/win/share/: tile2bmp.c
tilemap/: tilemap.vcxproj  tilemap.vcxproj.filters
